// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Image debe de mostar el componente correctamente con la imagen personalizada 1`] = `
<img
  alt="Coffe"
  className="productImg undefined"
  src="./no-image.jpg"
/>
`;

exports[`Product Image debe de mostrar el componente con el nombre del a imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Coffe"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
